WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74943
[Coverity] Fix leak in V8HTMLDocument
https://bugs.webkit.org/show_bug.cgi?id=74943
Summary
[Coverity] Fix leak in V8HTMLDocument
Greg Billock
Reported
2011-12-20 10:55:03 PST
[Coverity] Fix leak in V8HTMLDocument
Attachments
Patch
(1.50 KB, patch)
2011-12-20 10:55 PST
,
Greg Billock
no flags
Details
Formatted Diff
Diff
Patch
(2.17 KB, patch)
2011-12-20 12:01 PST
,
Greg Billock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Greg Billock
Comment 1
2011-12-20 10:55:42 PST
Created
attachment 120044
[details]
Patch
Adam Barth
Comment 2
2011-12-20 11:43:24 PST
Comment on
attachment 120044
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=120044&action=review
> Source/WebCore/bindings/v8/custom/V8HTMLDocumentCustom.cpp:156 > + delete[] params;
We should use OwnArrayPtr instead of manual delete.
Greg Billock
Comment 3
2011-12-20 12:00:14 PST
Comment on
attachment 120044
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=120044&action=review
>> Source/WebCore/bindings/v8/custom/V8HTMLDocumentCustom.cpp:156 >> + delete[] params; > > We should use OwnArrayPtr instead of manual delete.
Done.
Greg Billock
Comment 4
2011-12-20 12:01:39 PST
Created
attachment 120055
[details]
Patch
WebKit Review Bot
Comment 5
2011-12-20 15:46:18 PST
Comment on
attachment 120055
[details]
Patch Clearing flags on attachment: 120055 Committed
r103358
: <
http://trac.webkit.org/changeset/103358
>
WebKit Review Bot
Comment 6
2011-12-20 15:46:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug