[Coverity] Fix leak in V8HTMLDocument https://bugs.webkit.org/show_bug.cgi?id=74943

Patch by Greg Billock <gbillock@google.com> on 2011-12-20
Reviewed by Adam Barth.

* bindings/v8/custom/V8HTMLDocumentCustom.cpp:
(WebCore::V8HTMLDocument::openCallback):

git-svn-id: svn://svn.chromium.org/blink/trunk@103358 bbb929c8-8fbe-4397-9dbb-9b2b20218538